--- a/package.json
+++ b/package.json
@@ -1,64 +1,54 @@
 {
-  "name": "electron-template",
-  "productName": "Electron Template",
+  "name": "my-new-app",
+  "productName": "my-new-app",
   "version": "1.0.0",
   "description": "My Electron application description",
   "main": ".webpack/main",
   "scripts": {
-        "start": "electron-forge start",
-        "package": "electron-forge package",
-        "make": "electron-forge make",
-        "publish": "electron-forge publish",
-        "lint": "esling --ext .ts,.tsx ." 
-    },
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
+    "lint": "eslint --ext .ts,.tsx ."
+  },
   "keywords": [],
   "author": {
     "name": "Nathan Atchison",
-    "email": "Nathanatchison@rocketmail.com"
+    "email": "Natchison25@my.whitworth.edu"
   },
   "license": "MIT",
-  "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/server": "^11.11.0",
-    "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.18",
-    "@mui/material": "^5.15.17",
-    "electron-squirrel-startup": "^1.0.1",
-    "react": "^19",
-    "react-dom": "^19",
-    "react-router-dom": "^6.30.0",
-    "zod": "^3.25.20"
-  },
   "devDependencies": {
-    "@babel/core": "^7.26.10",
-    "@babel/preset-react": "^7.26.3",
-    "@electron-forge/cli": "^7.7.0",
-    "@electron-forge/maker-deb": "^7.7.0",
-    "@electron-forge/maker-dmg": "^7.7.0",
-    "@electron-forge/maker-rpm": "^7.7.0",
-    "@electron-forge/maker-squirrel": "^7.7.0",
-    "@electron-forge/maker-wix": "^7.7.0",
-    "@electron-forge/maker-zip": "^7.7.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.7.0",
-    "@electron-forge/plugin-fuses": "^7.7.0",
-    "@electron-forge/plugin-webpack": "^7.7.0",
-    "@types/node": "^20.17.27",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@vercel/webpack-asset-relocator-loader": "1.7.3",
-    "babel-loader": "^8.4.1",
-    "copy-webpack-plugin": "^11.0.0",
+    "@electron-forge/cli": "^7.10.2",
+    "@electron-forge/maker-deb": "^7.10.2",
+    "@electron-forge/maker-rpm": "^7.10.2",
+    "@electron-forge/maker-squirrel": "^7.10.2",
+    "@electron-forge/maker-zip": "^7.10.2",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.10.2",
+    "@electron-forge/plugin-fuses": "^7.10.2",
+    "@electron-forge/plugin-webpack": "^7.10.2",
+    "@electron/fuses": "^1.8.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@vercel/webpack-asset-relocator-loader": "^1.7.3",
     "css-loader": "^6.11.0",
-    "electron": "^24.8.8",
+    "electron": "38.4.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-import": "^2.32.0",
     "fork-ts-checker-webpack-plugin": "^7.3.0",
-    "jest": "^29.7.0",
-    "jest-junit": "^16.0.0",
     "node-loader": "^2.1.0",
-    "node-polyfill-webpack-plugin": "^2.0.1",
     "style-loader": "^3.3.4",
-    "ts-jest": "^29.3.0",
-    "ts-loader": "^9.5.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
-    }
+    "ts-loader": "^9.5.4",
+    "typescript": "~4.5.4"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.4",
+    "electron-squirrel-startup": "^1.0.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
+  }
 }
