--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "@mui/material": "^7.3.4",
     "electron-squirrel-startup": "^1.0.1",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   }
 }
