--- a/package.json
+++ b/package.json
@@ -35,9 +35,15 @@
     "css-loader": "^6.11.0",
     "electron": "38.4.0",
     "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-unicorn": "^48.0.1",
     "fork-ts-checker-webpack-plugin": "^7.3.0",
     "node-loader": "^2.1.0",
+    "prettier": "^3.6.2",
     "style-loader": "^3.3.4",
     "ts-loader": "^9.5.4",
     "typescript": "~4.5.4"
